Small addition to our page content.

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 		<title>Hallo Human</title>
 	</head>
 	<bdoy>
-		<h1>Hallo Friend!</h1>
+		<h1>Hallo Friend! It`s site for me!</h1>
 	</bdoy>
 </html>
